Finalized the home page, except the real photos, and currently working on the apparatus page

--- a/website/index.html
+++ b/website/index.html
@@ -54,7 +54,7 @@
 									<h2>The Apparatus</h2>
 									<p>Find out about the components contained within the kit to kickstart your experiment.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="apparatus.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -66,7 +66,7 @@
 									<h2>Experiment Protocol</h2>
 									<p>Find out more about the steps for how the experiment is carried out.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="experiment.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -78,7 +78,7 @@
 									<h2>Behind the Scenes</h2>
 									<p>Find out more about the process that went into creating the kit.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="bts.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -123,44 +123,27 @@
 						<div class="inner">
 							<h2>Our Team</h2>
 							<p>Here is the team of four that made this project possible.</p>
-								<ul class="contact">
-									<li>
-										<div class="split style2">
-											<section><img src="images/pic03.jpg" alt="" data-position="25% 25%" width="150" height="150"/></section>
-											<section>
-												<h3>Wee Hong</h3>
-												<span>Mechanical Designer</span>
-											</section>
-										</div>
-									</li>
-									<li>
-										<div class="split style2">
-											<section><img src="images/pic01.jpg" alt="" data-position="25% 25%" width="150" height="150"/></section>
-											<section>
-												<h3>Rakin</h3>
-												<span>Sensor Programmer</span>
-											</section>
-										</div>											
-									</li>
-									<li>
-										<div class="split style2">
-											<section><img src="images/pic01.jpg" alt="" data-position="25% 25%" width="150" height="150"/></section>
-											<section>
-												<h3>Wei Zhang</h3>
-												<span>Experiment Designer and Electronics Engineer</span>
-											</section>
-										</div>
-									</li>
-									<li>
-										<div class="split style2">
-											<section><img src="images/pic01.jpg" alt="" data-position="25% 25%" width="150" height="150"/></section>
-											<section>
-												<h3>Nathan</h3>
-												<span>Overseer and Parts Maker</span>
-											</section>
-										</div>											
-									</li>
-								</ul>
+							
+							<p>
+								<span class="image left"><img src="images/pic03.jpg" alt="" data-position="25% 25%" width="150" height="150"/></span>
+								<h3>Wee Hong</h3>
+								<span>Mechanical Designer</span>											
+							</p>
+							<p>
+								<span class="image left"><img src="images/pic01.jpg" alt="" data-position="25% 25%" width="150" height="150"/></span>
+								<h3>Rakin</h3>
+								<span>Sensor Programmer</span>																				
+							</p>
+							<p>
+								<span class="image left"><img src="images/pic01.jpg" alt="" data-position="25% 25%" width="150" height="150"/></span>
+								<h3>Wei Zhang</h3>
+								<span>Experiment Designer and Electronics Engineer</span>
+							</p>
+							<p>		
+								<span class="image left"><img src="images/pic01.jpg" alt="" data-position="25% 25%" width="150" height="150"/></span>					
+								<h3>Nathan</h3>
+								<span>Overseer and Parts Maker</span>
+							</p>
 						</div>
 					</section>
 
