Added the table for the list of components

--- a/website/apparatus.html
+++ b/website/apparatus.html
@@ -34,23 +34,60 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">The Apparatus</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<p>Here is a list of the tools at your disposal to carry out your experiment.</p>
+							<p>The majority of the components were made in 5mm acrylic because it was easy to work with and quick for prototyping. For components with more complex geometry, we used 3D printing.</p>
 							
-							<div class="box alt">
-								<div class="row gtr-uniform">
-									<div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
-									<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-									<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-									<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-									<div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
-									<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-									<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-									<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-									<div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
+							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+							
+							<section>
+								<h2>Here is a list of the components at your disposal to carry out your experiment.</h2>
+								<div class="table-wrapper">
+									<table>
+										<thead>
+											<tr>
+												<th></th>
+												<th>Components</th>
+												<th>Description</th>
+												<th>Quantity</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<td><img src="images/pic01.jpg"/></td>
+												<td style="vertical-align: middle;">The beam</td>
+												<td style="vertical-align: middle;">The main component of the experiment, which weight will be determined at the end of the experiment.</td>
+												<td style="vertical-align: middle; text-align: center;">1</td>
+											</tr>
+											<tr>
+												<td><img src="images/pic01.jpg"/></td>
+												<td style="vertical-align: middle;">The box</td>
+												<td style="vertical-align: middle; text-align: justify;">Houses most of the electronics and used to measure the force acting on it using a load cell. You can adjust the height of the sensor to straigthen the beam using the handle on the side. You can connect your computer to the Arduino inside the box to carry out your experiment.</td>
+												<td style="vertical-align: middle; text-align: center;">1</td>
+											</tr>
+											<tr>
+												<td><img src="images/pic01.jpg"/></td>
+												<td style="vertical-align: middle;">The balancer</td>
+												<td style="vertical-align: middle; text-align: justify;"></td>
+												<td style="vertical-align: middle; text-align: center;">1</td>
+											</tr>
+											<tr>
+												<td><img src="images/pic01.jpg"/></td>
+												<td style="vertical-align: middle;">Item One</td>
+												<td style="vertical-align: middle;">Ante turpis integer aliquet porttitor.</td>
+												<td style="vertical-align: middle; text-align: center;">1</td>
+											</tr>
+											<tr>
+												<td><img src="images/pic01.jpg"/></td>
+												<td style="vertical-align: middle;">Item One</td>
+												<td style="vertical-align: middle;">Ante turpis integer aliquet porttitor.</td>
+												<td style="vertical-align: middle; text-align: center;">1</td>
+											</tr>
+										</tbody>
+									</table>
 								</div>
-							</div>
-							</div>
+							</section>
+
+
+						</div>
 					</section>
 
 			</div>
