finished the list of components for the apparatus

--- a/website/apparatus.html
+++ b/website/apparatus.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - Hyperspace by HTML5 UP</title>
+		<title>The Apparatus - E-Practical</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -47,7 +47,6 @@
 												<th></th>
 												<th>Components</th>
 												<th>Description</th>
-												<th>Quantity</th>
 											</tr>
 										</thead>
 										<tbody>
@@ -55,37 +54,39 @@
 												<td><img src="images/pic01.jpg"/></td>
 												<td style="vertical-align: middle;">The beam</td>
 												<td style="vertical-align: middle;">The main component of the experiment, which weight will be determined at the end of the experiment.</td>
-												<td style="vertical-align: middle; text-align: center;">1</td>
 											</tr>
 											<tr>
 												<td><img src="images/pic01.jpg"/></td>
 												<td style="vertical-align: middle;">The box</td>
 												<td style="vertical-align: middle; text-align: justify;">Houses most of the electronics and used to measure the force acting on it using a load cell. You can adjust the height of the sensor to straigthen the beam using the handle on the side. You can connect your computer to the Arduino inside the box to carry out your experiment.</td>
-												<td style="vertical-align: middle; text-align: center;">1</td>
 											</tr>
 											<tr>
 												<td><img src="images/pic01.jpg"/></td>
 												<td style="vertical-align: middle;">The balancer</td>
-												<td style="vertical-align: middle; text-align: justify;"></td>
-												<td style="vertical-align: middle; text-align: center;">1</td>
+												<td style="vertical-align: middle; text-align: justify;">Used on the beam to straigten it. Needs to be connected to the box to work.</td>
 											</tr>
 											<tr>
 												<td><img src="images/pic01.jpg"/></td>
-												<td style="vertical-align: middle;">Item One</td>
-												<td style="vertical-align: middle;">Ante turpis integer aliquet porttitor.</td>
-												<td style="vertical-align: middle; text-align: center;">1</td>
+												<td style="vertical-align: middle;">The Stand</td>
+												<td style="vertical-align: middle; text-align: justify;">Acts as the pivot point for the beam, and holds the beam in place.</td>
 											</tr>
 											<tr>
 												<td><img src="images/pic01.jpg"/></td>
-												<td style="vertical-align: middle;">Item One</td>
-												<td style="vertical-align: middle;">Ante turpis integer aliquet porttitor.</td>
-												<td style="vertical-align: middle; text-align: center;">1</td>
+												<td style="vertical-align: middle;">The Connectors</td>
+												<td style="vertical-align: middle; text-align: justify;">The wires are used to connect the balancer to the box and the box to the computer.</td>
+											</tr>
+											<tr>
+												<td><img src="images/pic01.jpg"/></td>
+												<td style="vertical-align: middle;">The Computer</td>
+												<td style="vertical-align: middle; text-align: justify;">To power the electronics inside the box, as well as display instructions to the students.</td>
 											</tr>
 										</tbody>
 									</table>
 								</div>
 							</section>
-
+							
+							<h2>How to assemble the apparatus</h2>
+							<p>f</p>
 
 						</div>
 					</section>
