Changed the tabs for bts and experiment html and laid the basis for experiment

--- a/website/apparatus.html
+++ b/website/apparatus.html
@@ -52,17 +52,17 @@
 										<tbody>
 											<tr>
 												<td><img src="images/pic01.jpg"/></td>
-												<td style="vertical-align: middle;">The beam</td>
+												<td style="vertical-align: middle;">The Beam</td>
 												<td style="vertical-align: middle;">The main component of the experiment, which weight will be determined at the end of the experiment.</td>
 											</tr>
 											<tr>
 												<td><img src="images/pic01.jpg"/></td>
-												<td style="vertical-align: middle;">The box</td>
+												<td style="vertical-align: middle;">The Box</td>
 												<td style="vertical-align: middle; text-align: justify;">Houses most of the electronics and used to measure the force acting on it using a load cell. You can adjust the height of the sensor to straigthen the beam using the handle on the side. You can connect your computer to the Arduino inside the box to carry out your experiment.</td>
 											</tr>
 											<tr>
 												<td><img src="images/pic01.jpg"/></td>
-												<td style="vertical-align: middle;">The balancer</td>
+												<td style="vertical-align: middle;">The Balancer</td>
 												<td style="vertical-align: middle; text-align: justify;">Used on the beam to straigten it. Needs to be connected to the box to work.</td>
 											</tr>
 											<tr>
