Added the flowchart and added buttons to go back to the top for each page

--- a/website/apparatus.html
+++ b/website/apparatus.html
@@ -68,7 +68,7 @@
 											<tr>
 												<td><img src="images/pic01.jpg"/></td>
 												<td style="vertical-align: middle;">The Stand</td>
-												<td style="vertical-align: middle; text-align: justify;">Acts as the pivot point for the beam, and holds the beam in place.</td>
+												<td style="vertical-align: middle; text-align: justify;">Acts as the pivot point for the beam, and holds the beam in place. It is made of one base and two supports.</td>
 											</tr>
 											<tr>
 												<td><img src="images/pic01.jpg"/></td>
@@ -82,12 +82,29 @@
 											</tr>
 										</tbody>
 									</table>
+
+									<p style="text-align: center;"><a href="#header" class="button">Back Up</a></p>
 								</div>
 							</section>
 							
 							<h2>How to assemble the apparatus</h2>
-							<p>f</p>
+							<p>Step 1: <br/>
+								Take out the base and assemble the supports to make the stand.
+							</p>
+							
+							<p>Step 2: <br/>
+								Attach the beam to the stand.
+							</p>
 
+							<p>Step 3: <br/>
+								Connect the electronics with the computer.
+							</p>
+
+							<p>Step 4: <br/>
+								Download the code and you are ready to go.
+							</p>
+
+							<p style="text-align: center;"><a href="#header" class="button">Back Up</a></p>
 						</div>
 					</section>
 
