--- a/website/experiment.html
+++ b/website/experiment.html
@@ -37,15 +37,16 @@
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
 							<p>We will describe the steps to be taken to complete the experiment.</p>
 							<h2>Flowchart of Experiment</h2>
-							<img src="images/pic06.jpg" width="" height=""/>
-							<p></p>
+							<p style="text-align: center;"><img src="images/flowchart.jpg" width="1000" height=""/></p>
+							<p style="text-align: center;"><a href="#header" class="button">Back Up</a></p>
 
-							<h2>Step </h2>
-							<img src="images/pic06.jpg" width="" height=""/>
+							<h2>Step 1</h2>
+							<p style="text-align: center;"><img src="images/pic06.jpg" width="" height=""/></p>
+
+							<p style="text-align: center;"><a href="#header" class="button">Back Up</a></p>
 
 						</div>
 				</section>
-
 			</div>
 
 		<!-- Footer -->
