Added some photos in the bts.html, and changed the <p> tags that show text into <h3> tags for more visibility

--- a/website/experiment.html
+++ b/website/experiment.html
@@ -35,15 +35,15 @@
 						<div class="inner">
 							<h1 class="major">Experiment Protocol</h1>
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<p>We will describe the steps to be taken to complete the experiment.</p>
+							<h3>We will describe the steps to be taken to complete the experiment.</h3>
 							<h2>Flowchart of Experiment</h2>
-							<p style="text-align: center;"><img src="images/flowchart.jpg" width="1000" height=""/></p>
-							<p style="text-align: center;"><a href="#header" class="button">Back Up</a></p>
+							<h3 style="text-align: center;"><img src="images/flowchart.jpg" width="1000" height=""/></h3>
+							<h3 style="text-align: center;"><a href="#header" class="button">Back Up</a></h3>
 
 							<h2>Step 1</h2>
-							<p style="text-align: center;"><img src="images/pic06.jpg" width="" height=""/></p>
+							<h3h3 style="text-align: center;"><img src="images/pic06.jpg" width="" height=""/></h3>
 
-							<p style="text-align: center;"><a href="#header" class="button">Back Up</a></p>
+							<h3 style="text-align: center;"><a href="#header" class="button">Back Up</a></h3>
 
 						</div>
 				</section>
