--- a/website/experiment.html
+++ b/website/experiment.html
@@ -34,16 +34,69 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Experiment Protocol</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/science.jpg" alt="" /></span>
 							<h3>We will describe the steps to be taken to complete the experiment.</h3>
 							<h2>Flowchart of Experiment</h2>
 							<h3 style="text-align: center;"><img src="images/flowchart.jpg" width="1000" height=""/></h3>
 							<h3 style="text-align: center;"><a href="#header" class="button">Back Up</a></h3>
 
-							<h2>Step 1</h2>
-							<h3h3 style="text-align: center;"><img src="images/pic06.jpg" width="" height=""/></h3>
+							<h3>Step 1: <br/>
+								Take out the beam & knife edge from the science kit provided.
+							</h3>
+							
+							<h3>Step 2: <br/>
+								Place the beam on the knife edge to find the Center of Gravity (CG) of the beam.
+							</h3>
 
-							<h3 style="text-align: center;"><a href="#header" class="button">Back Up</a></h3>
+							<h3>Step 3: <br/>
+								Find the length L, from the center of the hole on the beam to the CG of the beam.
+							</h3>
+
+							<h3>Step 4: <br/>
+								Step 4: Set up the apparatus shown on the website.
+							</h3>
+
+							<h3>Step 5: <br/>
+								Ensure that the beam is horizontal.
+							</h3>
+
+							<h3>Step 6: <br/>
+								Finding the value of Force F exerted on the loadcell.
+							</h3>
+
+							<h3>Step 7: <br/>
+								Calculate and record down the value of 1/d.
+							</h3>
+
+							<h3>Step 8: <br/>
+								Draw and record all your records for F, d & 1/d in a table.
+							</h3>
+
+							<h3>Step 9: <br/>
+								We will be repeating steps 4 to 8 until you have records for at least 5 different values of d.
+							</h3>
+
+							<h3>Step 10: <br/>
+								Now with records of 5 different values of d, on a piece of graph paper, plot a graph of F (vertical axis) against 1/d (horizontal axis) and draw a line of best fit through your plotted points.
+							</h3>
+
+							<h3>Step 11: <br/>
+								Determine the gradient of the graph.
+							</h3>
+
+							<h3>Step 12: <br/>
+								Calculate the weight of the beam by using the formula 'weight = gradient/L'.
+							</h3>
+
+							<h3>Step 13: <br/>
+								Weigh the beam on the load cell.
+							</h3>
+
+							<h3>Step 14: <br/>
+								Calculate the percentage error between the calculated and actual weight of the beam, using the formula ' [(Actual - Calculated)/Actual] x100% '.
+							</h3>
+
+							<p style="text-align: center;"><a href="#header" class="button">Back Up</a></p>
 
 						</div>
 				</section>
