--- a/website/index.html
+++ b/website/index.html
@@ -48,7 +48,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/apparatus3.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>The Apparatus</h2>
@@ -60,7 +60,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/science.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Experiment Protocol</h2>
@@ -72,7 +72,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/weehong_working_cropped.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Behind the Scenes</h2>
@@ -125,24 +125,24 @@
 							<p>Here is the team of four that made this project possible.</p>
 							
 							<p>
-								<span class="image left"><img src="images/pic03.jpg" alt="" data-position="25% 25%" width="150" height="150"/></span>
-								<h3>Wee Hong</h3>
-								<span>Mechanical Designer</span>											
-							</p>
-							<p>
-								<span class="image left"><img src="images/pic01.jpg" alt="" data-position="25% 25%" width="150" height="150"/></span>
+								<span class="image left"><img src="images/rakn.jpg" alt="" data-position="25% 25%" width="200" height="200"/></span>
 								<h3>Rakin</h3>
 								<span>Sensor Programmer</span>																				
 							</p>
 							<p>
-								<span class="image left"><img src="images/pic01.jpg" alt="" data-position="25% 25%" width="150" height="150"/></span>
+								<span class="image left"><img src="images/weizhang.jpg" alt="" data-position="25% 25%" width="200" height="200"/></span>
 								<h3>Wei Zhang</h3>
 								<span>Experiment Designer and Electronics Engineer</span>
 							</p>
 							<p>		
-								<span class="image left"><img src="images/pic01.jpg" alt="" data-position="25% 25%" width="150" height="150"/></span>					
+								<span class="image left"><img src="images/nathan.jpg" alt="" data-position="25% 25%" width="200" height="200"/></span>					
 								<h3>Nathan</h3>
 								<span>Overseer and Parts Maker</span>
+							</p>
+							<p>
+								<span class="image left"><img src="images/hng.jpg" alt="" data-position="25% 25%" width="200" height="200"/></span>
+								<h3>Wee Hong</h3>
+								<span>Mechanical Designer</span>											
 							</p>
 						</div>
 					</section>
